--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,173 @@
     transform: rotate(360deg);
   }
 }
+
+/* General Styles */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
+}
+
+
+header, footer {
+  background-color: #333;
+  color: white;
+  padding: 1em;
+  text-align: center;
+}
+
+h1 {
+  margin: 0;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-links {
+  list-style-type: none;
+  padding: 0;
+}
+
+.nav-links li {
+  display: inline;
+  margin: 0 15px;
+}
+
+.nav-links a {
+  color: white;
+  text-decoration: none;
+}
+
+.nav-links a:hover {
+  text-decoration: underline;
+}
+
+/* Home Page */
+/* Hero Section */
+.hero {
+  height: 100vh;
+  background-image: url('../src/images/photos/library_1.jpg');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  position: relative;
+}
+
+.hero::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.hero-content {
+  position: relative;
+  z-index: 1;
+  padding: 20px;
+  max-width: 800px;
+}
+
+h1 {
+  font-size: 3.5rem;
+  margin-bottom: 20px;
+}
+
+p {
+  font-size: 1.5rem;
+  margin-bottom: 30px;
+}
+
+.cta-button {
+  padding: 15px 30px;
+  font-size: 1.2rem;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.cta-button:hover {
+  background-color: #0056b3;
+}
+
+/* About Section */
+.about-section, .services-section, .contact-section {
+padding: 3em 2em;
+background-color: #fff;
+}
+
+.about-section h2, .services-section h2, .contact-section h2 {
+font-size: 2em;
+margin-bottom: 1em;
+}
+
+.services-section ul {
+list-style-type: none;
+padding: 0;
+}
+
+.services-section li {
+font-size: 1.2em;
+margin-bottom: 0.5em;
+}
+
+/* Footer */
+.footer {
+background-color: #333;
+color: white;
+padding: 1em;
+text-align: center;
+}
+
+.footer p {
+margin: 0;
+}
+
+/* About Section */
+.about-section, .services-section, .contact-section {
+  padding: 3em 2em;
+  background-color: #fff;
+}
+
+.about-section h2, .services-section h2, .contact-section h2 {
+  font-size: 2em;
+  margin-bottom: 1em;
+}
+
+.services-section ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.services-section li {
+  font-size: 1.2em;
+  margin-bottom: 0.5em;
+}
+
+/* Footer */
+.footer {
+  background-color: #333;
+  color: white;
+  padding: 1em;
+  text-align: center;
+}
+
+.footer p {
+  margin: 0;
+}
+
